[gd_scene load_steps=11 format=3 uid="uid://qdojyqmhshuh"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_dr64f"]
[ext_resource type="PackedScene" uid="uid://cfy0hk1ugrycc" path="res://Scenes/navigation_button.tscn" id="2_elew8"]
[ext_resource type="PackedScene" uid="uid://buuni5rcmdxnj" path="res://Scenes/top.tscn" id="2_jvuum"]
[ext_resource type="PackedScene" uid="uid://chjr8l4mgb2jb" path="res://center.tscn" id="3_e2hp3"]
[ext_resource type="Script" path="res://Scripts/TextEdit.gd" id="4_13o6x"]
[ext_resource type="Script" path="res://Scripts/GameOver.gd" id="6_vsxq0"]
[ext_resource type="Script" path="res://Scripts/Restart.gd" id="7_awtvi"]
[ext_resource type="Script" path="res://Scripts/Select different Quiz.gd" id="10_cjcwy"]
[ext_resource type="Script" path="res://Scripts/QuizContainer.gd" id="11_otqwq"]

[sub_resource type="SystemFont" id="SystemFont_2fsn6"]
font_names = PackedStringArray("Monospace")
font_italic = true

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dr64f")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.145098, 0.133333, 1)

[node name="Middle" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Left" type="VBoxContainer" parent="Middle"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Middle/Left"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.188235, 0.223529, 0.317647, 1)

[node name="NavigationButton" parent="Middle/Left/ColorRect" instance=ExtResource("2_elew8")]
layout_mode = 1
size_flags_vertical = 4
decrease = true

[node name="Center" parent="Middle" instance=ExtResource("3_e2hp3")]
layout_mode = 2

[node name="TextEdit" parent="Middle/Center/ColorRect3/Control" index="1"]
script = ExtResource("4_13o6x")

[node name="Right" type="VBoxContainer" parent="Middle"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="Middle/Right"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.188235, 0.223529, 0.317647, 1)

[node name="NavigationButton2" parent="Middle/Right/ColorRect2" instance=ExtResource("2_elew8")]
layout_mode = 1
offset_left = -22.5
offset_right = 22.5
text = "Next"

[node name="GameOver" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_vsxq0")

[node name="ColorRect" type="ColorRect" parent="GameOver"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.188235, 0.223529, 0.317647, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_right = 104.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameOver/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Thanks for taking the Quiz."

[node name="Restart" type="Button" parent="GameOver/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Restart Quiz
"
script = ExtResource("7_awtvi")

[node name="Select different Quiz" type="Button" parent="GameOver/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Select a different Quiz"
script = ExtResource("10_cjcwy")

[node name="GameStart" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameStart"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.188235, 0.223529, 0.317647, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="GameStart/ColorRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_right = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("11_otqwq")

[node name="Label" type="Label" parent="GameStart/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Howdy fellow learner, which quiz would you like to practice?"

[node name="Label2" type="Label" parent="GameStart/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.513233, 0.513233, 0.513233, 1)
theme_override_fonts/font = SubResource("SystemFont_2fsn6")
text = "Select a JSON-file via the settings menu."
horizontal_alignment = 1

[node name="Top" parent="." instance=ExtResource("2_jvuum")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
grow_horizontal = 1

[node name="TextEdit" parent="Top/ColorRect/TabContainer/Load JSON/VBoxContainer" index="1"]
placeholder_text = "E.g. C:\\Users\\quiz.json"

[connection signal="pressed" from="GameOver/ColorRect/VBoxContainer/Restart" to="GameOver/ColorRect/VBoxContainer/Restart" method="_on_pressed"]
[connection signal="pressed" from="GameOver/ColorRect/VBoxContainer/Select different Quiz" to="GameOver/ColorRect/VBoxContainer/Select different Quiz" method="_on_pressed"]

[editable path="Middle/Center"]
[editable path="Top"]
